@@ -32,6 +32,7 @@ export("%as%")
 export(dict)
 export(import)
 export(import_builtins)
+export(import_from_package)
 export(import_main)
 export(iterate)
 export(py_available)
